add scroll view and contents inside

--- a/TestingScrollView/Base.lproj/Main.storyboard
+++ b/TestingScrollView/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,103 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestingScrollView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="icS-tE-PI3">
+                                <rect key="frame" x="0.0" y="44" width="414" height="1422"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2FA-YS-6fJ" userLabel="ContentView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1396.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Top" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRS-Ir-bI0">
+                                                <rect key="frame" x="193" y="23" width="29" height="29"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Center" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1lC-CG-N9c">
+                                                <rect key="frame" x="181" y="697" width="52" height="29"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Bottom" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="75t-Mp-qSw">
+                                                <rect key="frame" x="179" y="1385" width="56" height="29"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ym-51-W7s">
+                                                <rect key="frame" x="263" y="27" width="42" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="byd-Yw-H3X">
+                                                <rect key="frame" x="334" y="26" width="42" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qEV-Dh-PDz">
+                                                <rect key="frame" x="0.0" y="67" width="414" height="419"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" red="1" green="0.63415181545993526" blue="0.53410648658263282" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.1749463808" green="0.96475356820000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstItem="7Ym-51-W7s" firstAttribute="centerY" secondItem="kRS-Ir-bI0" secondAttribute="centerY" id="0t7-tq-J6e"/>
+                                            <constraint firstItem="byd-Yw-H3X" firstAttribute="leading" secondItem="7Ym-51-W7s" secondAttribute="trailing" constant="29" id="6fI-sG-GHg"/>
+                                            <constraint firstItem="byd-Yw-H3X" firstAttribute="centerY" secondItem="kRS-Ir-bI0" secondAttribute="centerY" id="6ig-Dy-bny"/>
+                                            <constraint firstAttribute="bottom" secondItem="75t-Mp-qSw" secondAttribute="bottom" constant="8" id="BPF-QL-e7y"/>
+                                            <constraint firstItem="75t-Mp-qSw" firstAttribute="centerX" secondItem="2FA-YS-6fJ" secondAttribute="centerX" id="Ira-hL-zwR"/>
+                                            <constraint firstItem="75t-Mp-qSw" firstAttribute="top" secondItem="1lC-CG-N9c" secondAttribute="bottom" constant="659" id="KUt-pz-B30"/>
+                                            <constraint firstItem="7Ym-51-W7s" firstAttribute="leading" secondItem="kRS-Ir-bI0" secondAttribute="trailing" constant="41" id="NjV-AB-B73"/>
+                                            <constraint firstItem="kRS-Ir-bI0" firstAttribute="centerX" secondItem="2FA-YS-6fJ" secondAttribute="centerX" id="aWE-1M-l83"/>
+                                            <constraint firstItem="kRS-Ir-bI0" firstAttribute="top" secondItem="2FA-YS-6fJ" secondAttribute="top" constant="23" id="nbJ-wh-bQN"/>
+                                            <constraint firstItem="1lC-CG-N9c" firstAttribute="top" secondItem="kRS-Ir-bI0" secondAttribute="bottom" constant="645" id="s2h-6w-4nG"/>
+                                            <constraint firstItem="1lC-CG-N9c" firstAttribute="centerX" secondItem="2FA-YS-6fJ" secondAttribute="centerX" id="ydq-Qg-vXY"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="2FA-YS-6fJ" firstAttribute="centerX" secondItem="icS-tE-PI3" secondAttribute="centerX" id="0sG-Qb-yuD"/>
+                                    <constraint firstAttribute="trailing" secondItem="2FA-YS-6fJ" secondAttribute="trailing" id="3RY-c7-oZR"/>
+                                    <constraint firstAttribute="trailing" secondItem="2FA-YS-6fJ" secondAttribute="trailing" id="3WQ-lo-ZU3"/>
+                                    <constraint firstAttribute="bottom" secondItem="2FA-YS-6fJ" secondAttribute="bottom" id="BEu-fw-YYD"/>
+                                    <constraint firstItem="2FA-YS-6fJ" firstAttribute="leading" secondItem="icS-tE-PI3" secondAttribute="leading" id="FJW-bS-A2P"/>
+                                    <constraint firstItem="2FA-YS-6fJ" firstAttribute="top" secondItem="icS-tE-PI3" secondAttribute="top" id="Fgv-J9-SnM"/>
+                                    <constraint firstItem="2FA-YS-6fJ" firstAttribute="height" secondItem="icS-tE-PI3" secondAttribute="height" priority="250" id="Oeq-zO-F6l"/>
+                                    <constraint firstAttribute="bottom" secondItem="2FA-YS-6fJ" secondAttribute="bottom" id="Ru9-Eu-eAm"/>
+                                    <constraint firstItem="2FA-YS-6fJ" firstAttribute="top" secondItem="icS-tE-PI3" secondAttribute="top" id="aFB-Xr-UhZ"/>
+                                    <constraint firstItem="2FA-YS-6fJ" firstAttribute="width" secondItem="icS-tE-PI3" secondAttribute="width" id="vwO-pP-EEx"/>
+                                    <constraint firstItem="2FA-YS-6fJ" firstAttribute="leading" secondItem="icS-tE-PI3" secondAttribute="leading" id="zH7-sb-gby"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="icS-tE-PI3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5Lc-XH-1jp"/>
+                            <constraint firstItem="icS-tE-PI3" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="80J-Ri-pDj"/>
+                            <constraint firstItem="icS-tE-PI3" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="8Sb-Sf-gCm"/>
+                            <constraint firstItem="icS-tE-PI3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BGW-Jh-Ima"/>
+                            <constraint firstItem="icS-tE-PI3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Hew-ey-wf5"/>
+                            <constraint firstItem="icS-tE-PI3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Nt3-E5-kii"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="icS-tE-PI3" secondAttribute="bottom" id="dz3-mj-xmN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="icS-tE-PI3" secondAttribute="trailing" id="h4S-Ua-FbH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <size key="freeformSize" width="414" height="1500"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="114.50892857142857"/>
         </scene>
     </scenes>
 </document>
