re-layout register page, add class for register page button

--- a/TestingScrollView/Base.lproj/Main.storyboard
+++ b/TestingScrollView/Base.lproj/Main.storyboard
@@ -85,9 +85,7 @@
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                                         <state key="normal" title="Button"/>
                                                         <connections>
-                                                            <segue destination="Vsc-px-Pe4" kind="popoverPresentation" popoverAnchorView="in5-j8-YCs" id="nDJ-Nf-KzH">
-                                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                                            </segue>
+                                                            <segue destination="Vsc-px-Pe4" kind="presentation" modalPresentationStyle="overFullScreen" id="nDJ-Nf-KzH"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -415,65 +413,40 @@
                             <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nZh-PP-1Pn">
                                 <rect key="frame" x="0.0" y="172" width="414" height="553"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g9Z-mC-kJ3" customClass="TextPlaceholderStyle" customModule="TestingScrollView" customModuleProvider="target">
-                                        <rect key="frame" x="91" y="145" width="233" height="57"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="57" id="8RC-PH-XGR"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6iQ-i6-Bxk" customClass="registerButton" customModule="TestingScrollView" customModuleProvider="target">
+                                        <rect key="frame" x="91" y="334" width="112" height="49"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m9e-SZ-Hxp" customClass="registerButton" customModule="TestingScrollView" customModuleProvider="target">
+                                        <rect key="frame" x="212" y="334" width="112" height="49"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9iC-YW-ge0">
+                                        <rect key="frame" x="91" y="270" width="233" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="77F-DJ-ZKP">
+                                        <rect key="frame" x="91" y="232" width="233" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H7g-au-B4o" customClass="TextPlaceholderStyle" customModule="TestingScrollView" customModuleProvider="target">
+                                        <rect key="frame" x="107" y="176" width="201" height="36"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                        <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1yW-il-LzB">
-                                        <rect key="frame" x="91" y="210" width="233" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OTR-IT-gOU">
-                                        <rect key="frame" x="91" y="248" width="233" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OTe-gu-Oxt">
-                                        <rect key="frame" x="91" y="286" width="233" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F7H-ac-fCD">
-                                        <rect key="frame" x="91" y="339" width="96" height="30"/>
-                                        <color key="backgroundColor" red="0.74351135316654493" green="0.75977232829724661" blue="0.77637224740932642" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y5z-6M-kq8">
-                                        <rect key="frame" x="228" y="339" width="96" height="30"/>
-                                        <color key="backgroundColor" red="0.42585272152518566" green="0.96475356820000002" blue="0.29321513819135459" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="96" id="Mkk-ZI-zf3"/>
-                                        </constraints>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.66648496810000002" green="0.79998530079999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstItem="1yW-il-LzB" firstAttribute="top" secondItem="g9Z-mC-kJ3" secondAttribute="bottom" constant="8" symbolic="YES" id="0Eo-Eb-1wb"/>
-                                    <constraint firstItem="y5z-6M-kq8" firstAttribute="trailing" secondItem="F7H-ac-fCD" secondAttribute="trailing" id="3yW-H7-ioD"/>
-                                    <constraint firstItem="OTe-gu-Oxt" firstAttribute="centerX" secondItem="y5z-6M-kq8" secondAttribute="centerX" id="C8S-KE-1zM"/>
-                                    <constraint firstItem="F7H-ac-fCD" firstAttribute="top" secondItem="y5z-6M-kq8" secondAttribute="bottom" constant="8" symbolic="YES" id="IoW-V6-T46"/>
-                                    <constraint firstItem="OTe-gu-Oxt" firstAttribute="top" secondItem="OTR-IT-gOU" secondAttribute="bottom" constant="8" symbolic="YES" id="JzF-Gu-1jC"/>
-                                    <constraint firstItem="1yW-il-LzB" firstAttribute="leading" secondItem="OTR-IT-gOU" secondAttribute="leading" id="N4A-aZ-MBP"/>
-                                    <constraint firstItem="g9Z-mC-kJ3" firstAttribute="centerX" secondItem="nZh-PP-1Pn" secondAttribute="centerX" id="Qbb-2R-5Ad"/>
-                                    <constraint firstItem="OTR-IT-gOU" firstAttribute="leading" secondItem="OTe-gu-Oxt" secondAttribute="leading" id="Tr4-Tp-Of2"/>
-                                    <constraint firstItem="g9Z-mC-kJ3" firstAttribute="top" secondItem="nZh-PP-1Pn" secondAttribute="top" constant="271" id="YYI-mL-MaO"/>
-                                    <constraint firstItem="y5z-6M-kq8" firstAttribute="top" secondItem="OTe-gu-Oxt" secondAttribute="bottom" constant="23" id="Ykc-TA-fZs"/>
-                                    <constraint firstItem="1yW-il-LzB" firstAttribute="trailing" secondItem="OTR-IT-gOU" secondAttribute="trailing" id="hiH-PQ-DlP"/>
-                                    <constraint firstItem="OTR-IT-gOU" firstAttribute="top" secondItem="1yW-il-LzB" secondAttribute="bottom" constant="8" symbolic="YES" id="m0j-lU-ZKk"/>
-                                    <constraint firstItem="g9Z-mC-kJ3" firstAttribute="leading" secondItem="1yW-il-LzB" secondAttribute="leading" id="sd0-gz-l7E"/>
-                                    <constraint firstItem="g9Z-mC-kJ3" firstAttribute="trailing" secondItem="1yW-il-LzB" secondAttribute="trailing" id="sk7-Bx-roH"/>
-                                    <constraint firstItem="OTR-IT-gOU" firstAttribute="trailing" secondItem="OTe-gu-Oxt" secondAttribute="trailing" id="sow-Kn-LA3"/>
-                                    <constraint firstItem="y5z-6M-kq8" firstAttribute="leading" secondItem="F7H-ac-fCD" secondAttribute="leading" id="uZj-CK-nN4"/>
-                                    <constraint firstItem="g9Z-mC-kJ3" firstAttribute="leading" secondItem="nZh-PP-1Pn" secondAttribute="leading" constant="91" id="wsH-b8-PQe"/>
-                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -485,11 +458,6 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="R7Y-mv-TnG"/>
                     </view>
-                    <connections>
-                        <outlet property="userEmailTextField" destination="OTR-IT-gOU" id="Fxs-o7-sP2"/>
-                        <outlet property="userNameTextField" destination="1yW-il-LzB" id="5Ac-jL-nKg"/>
-                        <outlet property="userPasswordTextField" destination="OTe-gu-Oxt" id="win-7i-Rj3"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wXF-dh-YJD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
